--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "dotenv": "^16.2.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "git-filter-repo": "^0.0.30",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
