--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "cypress": "^12.16.0"
   }
 }
