--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Clear docker context
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
+            docker stop next-app
+            docker stop next-app
+            docker system prune -a -f  
+
       - name: Send files to server
         uses: appleboy/scp-action@master
         with:
@@ -19,7 +30,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           source: "./"
-          target: "/${{ secrets.SERVER_USERNAME }}/app"
+          target: "/app"
 
       - name: Build and Run Docker Image
         uses: appleboy/ssh-action@master
@@ -30,8 +41,6 @@ jobs:
           script: |
             cd /${{ secrets.SERVER_USERNAME }}/app
             docker build -t next-app:latest .
-            docker stop next-app || true
-            docker rm next-app || true
             docker run -d \
               --name=next-app \
               -e CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
