--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           source: "./"
           target: "/app"
 
-      - name: Build and Run Docker Image
+      - name: Build Image
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -39,10 +39,18 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd /${{ secrets.SERVER_USERNAME }}/app
-            docker build -t next-app:latest .
+            docker build -t groovz-front:1.0 .
+
+      - name: Run Docker Image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |            
             docker run -d \
               --name=next-app \
               -e CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
               -e CLIENT_ID=${{ secrets.CLIENT_ID }} \
               -p 3000:3000 \
-              next-app:latest
+              groovz-front:1.0
