--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             docker stop next-app
+            docker stop next-app
             docker system prune -a -f  
 
       - name: Send files to server
@@ -28,10 +29,10 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: .
-          target: /app
+          source: "./"
+          target: "/app"
 
-      - name: Build Image
+      - name: Build and Run Docker Image
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -39,18 +40,10 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd /${{ secrets.SERVER_USERNAME }}/app
-            docker build -t groovz-front:1.0 .
-
-      - name: Run Docker Image
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: |            
+            docker build -t next-app:1.0 .
             docker run -d \
               --name=next-app \
               -e CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
               -e CLIENT_ID=${{ secrets.CLIENT_ID }} \
               -p 3000:3000 \
-              groovz-front:1.0
+              next-app:1.0
