--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             docker stop next-app
-            docker stop next-app
             docker system prune -a -f  
 
       - name: Send files to server
@@ -29,18 +28,26 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "./"
-          target: "/app"
+          source: ./
+          target: app
 
-      - name: Build and Run Docker Image
+      - name: Build API Image
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            cd /${{ secrets.SERVER_USERNAME }}/app
+            cd /${{ secrets.SERVER_USERNAME }}/app/
             docker build -t next-app:1.0 .
+
+      - name: Run Docker Image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
             docker run -d \
               --name=next-app \
               -e CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
