--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,15 @@ jobs:
           source: ./
           target: app
 
+      -name: Install node version
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
+            apt-get install node:latest
+
       - name: Build API Image
         uses: appleboy/ssh-action@master
         with:
