--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
           script: |
             cd /app
             npm install
-            npm run start
+            pm2 start npm --name "my-app" -- start
