--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,16 @@ jobs:
           npm ci
           npm run build
 
+      - name: Delete old files on the server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
+            rm -rf /app/*
+
+
       - name: SCP files to server
         uses: appleboy/scp-action@master
         with:
