--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "git-filter-repo": "^0.0.30",
+    "js-cookie": "^3.0.5",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "cypress": "^12.16.0"
   }
 }
