--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js App
+name: Deploy Groovz
 
 on:
   push:
@@ -31,7 +31,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             rm -rf /app/*
-
 
       - name: SCP files to server
         uses: appleboy/scp-action@master
